BUG: 117252

KSpread::Cell::isDate() did not work correctly.
Thus the increment for dates was wrongly determined
for autofill.

This is now fixed.

svn path=/trunk/koffice/; revision=485310